# filaco

./: .gitignore  .prettierrc.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json
.storybook/: main.ts
app/: globals.css  layout.tsx  page.tsx
app/blog/: page.tsx
app/components/atoms/BarsIcon/: BarsIcon.tsx
app/components/atoms/Button/: Button.tsx
app/components/atoms/Typography/: Typography.stories.tsx  Typography.tsx
app/lib/: fonts.ts  theme.ts
crates/blog/: Cargo.toml
crates/blog/src/: lib.rs
crates/blog/src/aggregate_root/: blog.rs
crates/blog/src/domain/: mod.rs
crates/blog/src/entity/: post.rs
crates/ddd/: Cargo.toml
crates/ddd/src/: aggregate_root.rs  command.rs  entity.rs  lib.rs  query.rs  version.rs
crates/ddd/src/app/: mod.rs
crates/ddd_derive/: Cargo.toml
crates/ddd_derive/src/: command.rs  entity.rs  lib.rs  query.rs  vo.rs
crates/portfolio/: Cargo.toml
crates/yadi/: Cargo.toml
crates/yadi/src/: builder.rs  entry.rs  injectable.rs  lib.rs
filaco_ddd/: Cargo.toml
filaco_ddd/src/: entity.rs  lib.rs  v1.rs  vo.rs
filaco_gateway/: Cargo.toml  README.md
filaco_surrounded/: Cargo.toml
filaco_surrounded/docs/: design.md
filaco_surrounded/src/: lib.rs  main.rs
filaco_surrounded/src/feature/: logging.rs  map.rs  mod.rs  movement.rs  plugin.rs
filaco_surrounded/src/feature/map/: plugin.rs
filaco_surrounded/src/feature/player/: plugin.rs
filaco_surrounded/src/feature/stranger/: camera.rs  input.rs  mod.rs  plugin.rs
filaco_web/: .dockerignore  .eslintrc.cjs  .prettierrc  Dockerfile  README.md  package-lock.json  package.json
filaco_web/src/routes/: +layout.svelte
src/: app.rs  lib.rs  main.rs
src/app/: error.rs  kernel.rs  mod.rs  result.rs  route.rs
src/app/command/: handler.rs
src/app/config/: mod.rs  socket_addr.rs
src/app/query/: handler.rs
src/domain/: mod.rs
src/domain/user/: error.rs  mod.rs
src/util/: mod.rs
src/util/ddd/: aggregate.rs  entity.rs  mod.rs  repo.rs  vo.rs
yadi/: Cargo.toml
yadi/src/v1/: error.rs  injectable.rs  mod.rs  result.rs
(+33 files in other folders)
