[package]
name = "filaco"
version = "0.1.0"
authors = ["Dmitrii Chizha <me@filaco.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
axum = { version = "0.6" }
dotenvy = { version = "0.15" }
serde = { version = "1" }
syn = { version = "2" }
quote = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.6" }