[package]
name = "filaco"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = { version = "1" }
thiserror = { version = "2" }

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8" }
leptos = { version = "0.7" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
yadi = { path = "crates/yadi" }

