[package]
name = "filaco_surrounded"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12"}
bevy_pkv = { version = "0.9" }
bevy_rapier3d = { version = "0.23" }
log = { version = "0.4" }
log4rs = { version = "1" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3